<resources>
    <string name="app_name">PantherX Core</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temas">Temas</string>
    <string name="Purpura">Purpura</string>
    <string name="Amarillo">Amarillo</string>
    <string name="Naranja">Naranja</string>
    <string name="Gris">Gris</string>
    <string name="Apariencia">Apariencia</string>
    <string name="claro">Claro</string>
    <string name="oscuro">Oscuro</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="voler">Volver</string>
    <string name="Nombre">Nombre del entrenamiento</string>
    <string name="descripcion">Descripcion</string>
    <string name="añadir">Añadir</string>
</resources>