<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            app:boxStrokeColor="@color/whiter"
            app:hintTextColor="@color/whiter"
            app:startIconTint="@color/whiter"
            app:endIconTint="@color/whiter"
            android:textColorHint="@color/whiter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTrainingName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/whiter" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/descripcion"
            app:boxStrokeColor="@color/whiter"
            app:hintTextColor="@color/whiter"
            app:startIconTint="@color/whiter"
            app:endIconTint="@color/whiter"
            android:textColorHint="@color/whiter">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTrainingDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:textColor="@color/whiter"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/addButton"
            android:textSize="16sp"
            android:text="@string/añadir"/>


    </LinearLayout>
    <Button
        android:id="@+id/backButton"
        android:layout_width="168dp"
        android:layout_height="67dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:text="@string/voler"
        android:textSize="20sp"
        android:textStyle="bold"

        />
</com.google.android.material.card.MaterialCardView>